@@ -1,3 +1,7 @@
+Changelog next version
+----------------------
+* Added OSGi metadata to manifest files (issue 204)
+
 Change log 1.5.2 (2013-11-18)
 -----------------------------
 * Fixed PowerMock OOM (OutOfMemory) issues with Mockito (big thanks to Henrik Karlsson for the patch).
